# ai_enhanced_pdf_scholar

./: .actrc  .bandit  .coveragerc  .cursor-rules.md  .env.example  .flake8  .gitignore  .performance.yml  .pre-commit-config.yaml  .safety-policy.yml  =5.2.0  ACCURACY_CORRECTION_REPORT.md  ANALYTICS.md  API_ENDPOINTS.md  API_KEY_SETUP.md  API_SPEC.md  ARCHITECTURE.md  AUTHENTICATION_IMPLEMENTATION.md  CHANGELOG.md  CITATION_LIBRARIES_GUIDE.md  CI_OPTIMIZATION_GUIDE.md  CLAUDE.md  COMPLETION_REPORT.md  COMPREHENSIVE_FUNCTION_ANALYSIS_REPORT.md  CONFIGURATION_MIGRATION_GUIDE.md  CONTRIBUTING.md  CURRENT_VERIFICATION_STATUS.md  DATABASE_PERFORMANCE_OPTIMIZATION.md  DEPENDENCY_NOTES.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SETUP.md  DEV_ENVIRONMENT_STATUS.md  DOCUMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENHANCEMENT_SUMMARY.md  GITHUB_SECRETS_GUIDE.md  HEALTH_ENDPOINT_FIX_SUMMARY.md  (+149 more)
.sisyphus/: ralph-loop.local.md
alerts/: intelligent-alerts.yml  performance-regression-alerts.yml
demo_output/: citation_network_sample.json
docs/: API_CONTRACT.md  CI_PARITY.md  CODE_REVIEW_SECURITY_CHECKLIST.md  CORS_DEPLOYMENT_EXAMPLES.md  CORS_SECURITY_GUIDE.md  DEVELOPER_GUIDE.md  MONITORING_OPERATIONS_GUIDE.md  RAG_API_REFERENCE.md  RATE_LIMITING.md  README.md  SECRETS_MANAGEMENT.md  SECURITY_FIX_S106.md  SECURITY_HEADERS_GUIDE.md  SECURITY_SQL_INJECTION_PREVENTION.md  SECURITY_VALIDATION_IMPLEMENTATION.md  STREAMING_UPLOAD_SYSTEM.md  SYSTEM_PRD.md  SYSTEM_TDD.md  TESTING.md  migration_refactoring_plan.md
frontend/: .eslintrc.cjs  .prettierrc  BUNDLE_OPTIMIZATION.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ci.ts  vite.config.ts  vitest.config.ts
k8s/: resources.yaml
monitoring/: alerts.yml  cost-tracking-dashboard.json  health-dashboard.json  log-monitoring-dashboard.json  performance-baseline-dashboard.json  scaling-dashboard.json
mypy_analysis/: auto_fixable.txt  auto_fixable_files.txt  batch_1_high_risk.txt  error_summary.json  manual_complex.txt  manual_simple.txt  semi_auto.txt
openspec/: project.md
performance_results/: comprehensive_performance_results_20250809_001308.json  comprehensive_performance_results_20250809_163358.json  comprehensive_system_performance.json  database_performance_metrics.json  document_load_test_comprehensive.json  load_testing_results.json  memory_leak_analysis_20250810_102338.json  memory_leak_analysis_20250810_103126.json  memory_usage_analysis.json  performance_report_20250809_001308.html  performance_report_20250809_163358.html  production_performance_report_20250810_103213.html  production_performance_validation_20250810_103213.json  production_readiness_assessment.json  reliability_test_results.json  system_performance_report.json
prometheus_client/: __init__.py  core.py
prompt_templates/: retrieval_qa.yml
reports/: AI_UAT_FINAL_VALIDATION.md  AI_UAT_Final_Status_Report.md  AI_UAT_REGRESSION_TEST_FINAL.md  AI_UAT_Remediation_Report.md  AI_UAT_Report.md  AI_UAT_Report_REVALIDATION.md  API_Startup_Debug_Report.md  API_Startup_FINAL_DIAGNOSIS.md  CI_Analysis_Report.md  Cleanup_Execution_Summary.md  Cleanup_Proposal.md  Database_Connection_Fix_Validation.md  Docker_Connection_Diagnostics.md  F821_Fix_Completion_Report.md  F821_Undefined_Names_Fix_Report.md  Health_Check_Resolution_Report.md  Project_Health_Check.md  UNIT_TEST_EXECUTION_REPORT.md  VERIFICATION_STATUS_REPORT.md  auth_baseline_report.md  auth_violations_baseline.json  coverage_analysis.html  day1_summary.md  day2_summary.md  failed_tests_analysis.json  fix_recommendations.md  integration_tests.xml  migration_perf203_audit.md  quality-dashboard.html  rag_tests.xml  routes_baseline_report.md  security_tests.xml  test_execution_summary.json  test_performance_metrics.json  unit_tests.xml
scripts/: aggregate_complexity.py  alert_response_automation.py  api_benchmark.py  api_docs_sync.py  apply_endpoint_security.py  backup_encryption_service.py  backup_orchestrator.py  benchmark_streaming_upload.py  benchmark_suite.py  benchmark_tests.py  cache_analytics.py  ci_performance_check.py  ci_performance_optimizer.py  compare_floats.py  compliance_validator.py  comprehensive_performance_suite.py  convert_remaining_migrations.py  cost_optimizer.py  data_consistency_validator.py  database_load_balancer.py  database_performance_benchmark.py  demo_citation_network_analysis.py  deploy_secrets.sh  deployment_orchestrator.py  disaster_recovery_orchestrator.py  docs_generator.py  docs_quality_checker.py  document_load_tester.py  enable_encryption.py  environment_health_check.py  establish_performance_baseline.py  feature_flag_deployer.py  fix_b007_unused_vars.py  fix_b904_syntax_errors.py  fix_b904_violations.py  fix_c901_complexity_top3.py  fix_e722_bare_except.py  fix_exception_chaining.py  fix_from_e_indent.py  fix_optional_defaults.py  (+52 more)
src/: annotation.py  annotation_manager.py  chat_input.py  chat_manager.py  chat_message.py  chat_panel.py  index_worker.py  inquiry_popup.py  llm_service.py  llm_worker.py  loading_indicator.py  pdf_document.py  pdf_viewer.py  rag_service.py  responsive_utils.py  settings_dialog.py
terraform/: main.tf  outputs.tf  variables.tf
test-results/: parallel_validation_results.json
tests/: README.md  README_AGENT_A4_TESTING.md  README_PARALLEL_TESTING.md  conftest.py  example_optimized_test.py  parallel_test_utils.py  parallel_testing_demo.py  performance_optimization.py  test_annotation_components.py  test_annotation_manager.py  test_annotation_manager_logic.py  test_auth_routes.py  test_authentication.py  test_categorization.py  test_chat_input.py  test_chat_manager.py  test_chat_message.py  test_chat_panel.py  test_citation_models.py  test_citation_network_analysis.py  test_citation_repositories.py  test_citation_services.py  test_content_hash_service.py  test_coverage_report.md  test_database_connection.py  test_database_connection_optimized.py  test_database_models.py  test_database_setup.py  test_enhanced_database_connection.py  test_index_worker.py  (+36 more)
(+697 files in other folders)
