# ============================================================================
# AI Enhanced PDF Scholar - Python Project Configuration
# Modern Python tooling configuration (PEP 518)
# ============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "ai-enhanced-pdf-scholar"
version = "2.0.0"
description = "AI-powered PDF document management and analysis system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Enhanced PDF Scholar Team", email = "contact@example.com"}
]
maintainers = [
    {name = "AI Enhanced PDF Scholar Team", email = "contact@example.com"}
]
keywords = [
    "pdf", "ai", "rag", "document-management", "llm", "fastapi", "react"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "PyMuPDF",
    "llama-index==0.12.45",
    "llama-index-llms-google-genai",
    "llama-index-embeddings-google-genai", 
    "llama-index-readers-file",
    "python-dotenv",
    "markdown",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "playwright>=1.30.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/Jackela/ai_enhanced_pdf_scholar"
Documentation = "https://github.com/Jackela/ai_enhanced_pdf_scholar/blob/main/PROJECT_DOCS.md"
Repository = "https://github.com/Jackela/ai_enhanced_pdf_scholar"
"Bug Tracker" = "https://github.com/Jackela/ai_enhanced_pdf_scholar/issues"
Changelog = "https://github.com/Jackela/ai_enhanced_pdf_scholar/releases"

[project.scripts]
ai-pdf-scholar = "web_main:main"

# ============================================================================
# Black Configuration (Code Formatting)
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | build
    | dist
    | node_modules
    | frontend
)/
'''
force-exclude = '''
/(
    migrations/
    | htmlcov/
    | coverage_*/
)/
'''

# ============================================================================
# isort Configuration (Import Sorting)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src", "backend", "tests"]
known_third_party = [
    "fastapi", "uvicorn", "pydantic", "pytest", "llama_index",
    "PyMuPDF", "markdown", "dotenv"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = [
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
    "*/node_modules/*",
    "*/frontend/*",
    "htmlcov/*",
    "coverage_*/*"
]

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# Exclude directories
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "node_modules/",
    "frontend/",
    "migrations/",
    "htmlcov/",
    "coverage_.*/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "PyMuPDF.*",
    "llama_index.*",
    "playwright.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=75",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests - isolated component testing",
    "integration: Integration tests - component interaction",
    "e2e: End-to-end tests - full workflow testing", 
    "slow: Slow running tests",
    "database: Tests requiring database setup",
    "services: Service layer tests",
    "repositories: Repository layer tests",
    "api: API endpoint tests",
    "frontend: Frontend tests",
    "security: Security tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
timeout = 300

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "*/frontend/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
skip_covered = false
skip_empty = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Bandit Configuration (Security)
# ============================================================================

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "frontend",
    "htmlcov",
    "coverage_*",
]
skips = [
    "B101",  # Test for use of assert (common in tests)
    "B601",  # Test for shell injection (we control our shell usage)
]

[tool.bandit.any_other_function_with_shell_equals_true]
no_shell = [
    "os.execl",
    "os.execle", 
    "os.execlp",
    "os.execlpe",
    "os.execv",
    "os.execve",
    "os.execvp",
    "os.execvpe",
    "os.spawnl",
    "os.spawnle",
    "os.spawnlp",
    "os.spawnlpe",
    "os.spawnv",
    "os.spawnve",
    "os.spawnvp",
    "os.spawnvpe",
    "os.startfile"
]
shell = [
    "os.system",
    "os.popen",
    "os.popen2",
    "os.popen3",
    "os.popen4",
    "popen2.popen2",
    "popen2.popen3",
    "popen2.popen4",
    "popen2.Popen3",
    "popen2.Popen4",
    "commands.getoutput",
    "commands.getstatusoutput"
]
subprocess = [
    "subprocess.Popen",
    "subprocess.call",
    "subprocess.check_call",
    "subprocess.check_output"
]

# ============================================================================
# Development Tools Configuration
# ============================================================================

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

# ============================================================================
# Build Configuration
# ============================================================================

[tool.wheel]
universal = false

# ============================================================================
# Development Scripts
# ============================================================================

[tool.scripts]
dev = "python web_main.py --debug"
test = "pytest"
lint = "flake8 src/ backend/ tests/"
format = "black src/ backend/ tests/ && isort src/ backend/ tests/"
typecheck = "mypy src/ backend/"
security = "bandit -r src/ backend/"
coverage = "pytest --cov=src --cov-report=html"